kubernetes/deployment.yaml
# REDIS
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: flask-app
  name: flask-redis-deployment
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-storage
              mountPath: /data/redis
      volumes:
        - name: redis-storage
          persistentVolumeClaim:
            claimName: redis-pvc

---
# Flask App
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
  namespace: flask-app
  labels:
    app: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
          app: flask
    spec:
      containers:
        - name: flask
          image: acrdevecijallu.azurecr.io/flask-app:latest
          ports:
            - containerPort: 8000
