kubernetes/services.yaml
# REDIS
apiVersion: v1
kind: Service
metadata:
  namespace: flask-app
  name: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379

---
# Flask App
apiVersion: v1
kind: Service
metadata:
  namespace: flask-app
  name: flask
spec:
  type: NodePort
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 8000
      nodePort: 31080
