kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: flask-app
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: flask
      port:
        number: 5000
